# practical-deep-learning-for-coders

./: 02_production revision notes.md  04_mnist_basics.ipynb  04_mnist_rewritten.ipynb  Lesson 1.md  Lesson 2.md  Lesson 3-4.md  README.md  lesson-1_norwich-vs-ipswich.ipynb  main.py  pyproject.toml
.obsidian/: hotkeys.json  workspace.json
