[project]
name = "practical-deep-learning-for-coders"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastai>=2.8.6",
    "fastbook>=0.0.28",
    "icrawler>=0.6.10",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "kagglehub>=0.3.13",
    "pillow>=12.0.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
